--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container" id="weather">
         <div class="row">
-            
+            <div id="tempDiv">
+              <span id="temp"></span>
+            </div>
+
         </div>
     </div>
 
